--- a/Spring/생성자주입비교.md
+++ b/Spring/생성자주입비교.md
@@ -1,2 +1,41 @@
 # @Autowired vs 생성자 주입
-ㅇ
+생성자 주입(Constructor Injection)과 @Autowired를 사용한 주입은 Spring Framework에서 의존성 주입을 수행하는 두 가지 주요 방법이다.
+```
+주입 방법:
+
+생성자 주입(Constructor Injection):
+클래스의 인스턴스를 생성하는 시점에 모든 필수 의존성이 주입되어야 하며, 이는 객체의 불변성(Immutability)을 강조하고 의존성이 존재하지 않는 상태에서 클래스를 생성할 수 없도록 한다.
+
+@Autowired:
+클래스의 인스턴스 생성시점과 분리되어 의존성 주입을 진행한다.
+
+일반적으로 필드 주입 또는 세터 주입과 함께 사용되며, 주입할 대상을 자동으로 탐지하고 주입한다.
+생성자 주입과 달리, @Autowired를 사용하면 의존성을 선택적으로 주입할 수 있다.
+```
+```
+의존성 주입 시점:
+
+생성자 주입(Constructor Injection):
+생성자 주입은 객체 인스턴스를 생성하는 시점에 의존성이 주입되어 객체의 불변성을 보장하며, 해당 클래스의 인스턴스가 생성될 때 의존성이 필요하다.
+
+@Autowired:
+@Autowired를 사용한 주입은 스프링 컨테이너가 빈을 생성하고 초기화한 후에 주입되므로, 해당 빈이 생성된 이후에 의존성이 주입된다.
+주입되는 의존성이 선택적으로 변경될 수 있다.
+```
+```
+가독성 및 유연성:
+
+생성자 주입(Constructor Injection):
+컴파일 시점에 필수적인 의존성이 전달되지 않으면 객체를 생성할 수 없도록 보장한다.(type-safe)
+또한 생성자의 매개변수로 의존성을 직접 지정하기 때문에 가독성이 높고, 테스트하기 쉽다.
+
+@Autowired:
+@Autowired를 사용하면 필요한 의존성을 스프링이 자동으로 주입해주기 때문에 코드가 더 간결해질 수 있다.
+또한 선택적으로 의존성을 주입할 수 있기 때문에 유연성이 높다.
+```
+
+요약하면, 생성자 주입을 사용하면 클래스의 불변성과 명확한 의존성 표현을 강조할 수 있고, 
+
+@Autowired를 사용하면 주입을 자동화하고 코드의 간결성을 증가시키고 유연성이 높아진다.
+
+선택은 프로젝트 요구사항 및 개발자의 개인적인 선호도에 따라 진행하면 된다.
