--- a/디자인패턴/템플릿메서드패턴.md
+++ b/디자인패턴/템플릿메서드패턴.md
@@ -9,7 +9,7 @@
 부가기능은 핵심 기능을 보조하기 위해 제공되는 기능이다. 예를 들어서 로그 추적 로직, 트랜잭션 기능이 있다. 
 이러한 부가 기능은 단독으로 사용되지는 않고, 핵심 기능을 보조하기 위해 함께 사용된다.
 ```
-#### step 1
+#### Step 1 - 템플릿 메서드 패턴을 적용하지 않은 예
 ```java
 private void logic1() {
         long startTime = System.currentTimeMillis();
@@ -31,11 +31,55 @@ private void logic1() {
         log.info("resultTime={}", resultTime);
     }
 ```
+#### Step 2 - 템플릿 메서드 패턴을 적용
+```java
+private void templateMethodV1() {
+        AbstractTemplate template1 = new SubClassLogic1();
+        template1.execute();
 
+        AbstractTemplate template2 = new SubClassLogic2();
+        template2.execute();
+    }
 
+public abstract class AbstractTemplate {
+    //부가로직
+    public void execute() {
+        long startTime = System.currentTimeMillis();
+        //비즈니스 로직 실행
+        call(); //상속
+        //비즈니스 로직 종료
+        long endTime = System.currentTimeMillis();
+        long resultTime = endTime - startTime;
+        log.info("resultTime={}", resultTime);
+    }
 
+    //핵심로직
+    protected abstract void call();
+}
 
+public class SubClassLogic1 extends AbstractTemplate {
+    @Override
+    protected void call() {
+        log.info("비즈니스 로직1 실행");
+    }
+}
 
+public class SubClassLogic2 extends AbstractTemplate {
+    @Override
+    protected void call() {
+        log.info("비즈니스 로직2 실행");
+    }
+}
+```
+#### Step 3 - 템플릿 메서드 패턴에 익명클래스 적용
+```java
+public void templateMethodV2() {
+        AbstractTemplate template1 = () -> { log.info("비즈니스 로직1 실행");};
+        template1.execute();
 
+        AbstractTemplate template2 = () -> { log.info("비즈니스 로직2 실행");};
+        template2.execute();
+    }
+```
 
-<img width="600" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/b18970bd-e3e9-4c84-aacf-7c5cfeaac3eb">
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/b18970bd-e3e9-4c84-aacf-7c5cfeaac3eb">
