--- a/디자인패턴/전략패턴.md
+++ b/디자인패턴/전략패턴.md
@@ -1,7 +1,12 @@
 # 전략패턴
 전략 패턴은 변하지 않는 부분을 `Context` 라는 곳에 두고, 변하는 부분을 `Strategy` 라는 인터페이스를 만들어, 해당 인터페이스를 구현하도록 해서 문제를 해결한다. 
 
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/447a1182-cd60-4370-b6bc-b4680aafd19a">
+
 상속이 아니라 위임으로 문제를 해결하는 것이다.
+
+### STEP 1 - 선조립 후 실행
+
 ```java
 @Slf4j
 @NoArgsConstructor
@@ -11,9 +16,11 @@ public class ContextV1 {
 
     public void execute() {
         long startTime = System.currentTimeMillis();
+
         //비즈니스 로직 실행
         strategy.call(); //위임
         //비즈니스 로직 종료
+
         long endTime = System.currentTimeMillis();
         long resultTime = endTime - startTime;
         log.info("resultTime={}", resultTime);
@@ -27,7 +34,7 @@ public interface Strategy {
     void call();
 }
 ```
-
+변하는부분과, 변하지 않는부분을 나누어 구현
 
 ```java
 public void strategy() {
@@ -48,21 +55,65 @@ public void strategy() {
         context2.execute();
     }
 ```
+위의 방법으로 구현한 전략패턴은 여러 Context instance를 만들어 구현되었다.
+
+Context와 Strategy를 조립한 후 Strategy의 변경이 쉽지 않은데, Context를 Singleton 방식으로 사용해야한다고 할때 전략을 Parameter로 주입하여 구현해보자.
+
+### STEP 2 - 파라미터로 전략 주입
+
+전략을 직접 parameter로 주입받아서 구현한다.
+
 ```java
 @Slf4j
 public class ContextV2 {
 
     public void execute(Strategy strategy) {
         long startTime = System.currentTimeMillis();
+
         //비즈니스 로직 실행
         strategy.call(); //위임
         //비즈니스 로직 종료
+
         long endTime = System.currentTimeMillis();
         long resultTime = endTime - startTime;
         log.info("resultTime={}", resultTime);
     }
 }
 ```
+```java
+public void strategy() {
+        ContextV2 context = new ContextV2();
+        context.execute(new StrategyLogic1());
+        context.execute(new StrategyLogic2());
+}
+```
+```java
+public interface Strategy {
+    void call();
+}
 
+public class StrategyLogic1 implements Strategy {
+    @Override
+    public void call() {
+        log.info("비즈니스 로직1 실행");
+    }
+}
 
-<img width="587" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/447a1182-cd60-4370-b6bc-b4680aafd19a">
+public class StrategyLogic2 implements Strategy {
+    @Override
+    public void call() {
+        log.info("비즈니스 로직2 실행");
+    }
+}
+```
+
+### 정리
+
+STEP 1은 필드에 `Strategy` 를 저장하는 방식으로 전략 패턴을 구사했다.
+
+`Context` 를 실행하는 시점에는 이미 조립이 끝났기 때문에 전략을 신경쓰지 않고 단순히 실행만 하면 된다.
+
+STEP 2는 파라미터에 `Strategy` 를 전달받는 방식으로 전략 패턴을 구사했다.
+
+실행할 때 마다 전략을 유연하게 변경할 수 있지만, 실행할때마다 전략을 계속 지정해주어야 한다.
+
