--- a/디자인패턴/전략패턴.md
+++ b/디자인패턴/전략패턴.md
@@ -1,9 +1,9 @@
 # 전략패턴
 전략 패턴은 변하지 않는 부분을 `Context` 라는 곳에 두고, 변하는 부분을 `Strategy` 라는 인터페이스를 만들어, 해당 인터페이스를 구현하도록 해서 문제를 해결한다. 
 
-<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/447a1182-cd60-4370-b6bc-b4680aafd19a">
+템플릿 메서드 패턴과 다른점은 상속이 아니라 위임으로 문제를 해결하는 것이다.
 
-상속이 아니라 위임으로 문제를 해결하는 것이다.
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/447a1182-cd60-4370-b6bc-b4680aafd19a">
 
 ### STEP 1 - 선조립 후 실행
 
