--- a/디자인패턴/템플릿콜백패턴.md
+++ b/디자인패턴/템플릿콜백패턴.md
@@ -2,3 +2,101 @@
 ### 콜백이란?
 `callback` 은 코드가 호출( `call` )은 되는데 코드를 넘겨준 곳의 뒤( `back` )에서 실행된다는 뜻이다.
 
+템플릿 콜백 패턴은 Spring에서의 디자인 패턴 이름으로, 전략패턴에서 `Context` 의 필드에 `Strategy` 를 파라미터로 전달받아 사용하는 패턴과 동일하다.
+
+- `Context` -> `Template`
+- `Strategy` -> `Callback`
+
+Spring안에서 많이 사용되는 디자인 패턴으로, JDBCTemplate, RestTemplate 등 여러 XXXTemplate로 명명된 클래스들에서 많이 사용된다.
+
+### Callback
+
+```java
+ public interface TraceCallback<T> {
+     T call();
+}
+```
+
+### Template
+
+```java
+@NoArgsConstructor
+public class TraceTemplate {
+
+     private final LogTrace trace;
+   
+     public <T> T execute(String message, TraceCallback<T> callback) {
+         TraceStatus status = null;
+
+         try {
+             status = trace.begin(message);
+
+             //로직 호출
+             T result = callback.call();
+
+             trace.end(status);
+             return result;
+         } catch (Exception e) {
+             trace.exception(status, e);
+             throw e;
+        }
+    }
+}
+
+public interface LogTrace {
+    TraceStatus begin(String message);
+
+    void end(TraceStatus status);
+
+    void exception(TraceStatus status, Exception e);
+}
+```
+템플릿 콜백을 적용한 Controller
+
+```java
+@RestController
+public class OrderControllerV5 {
+
+    private final OrderServiceV5 orderService;
+    private final TraceTemplate template;
+
+    public OrderControllerV5(OrderServiceV5 orderService, LogTrace trace) {
+        this.orderService = orderService;
+        this.template = new TraceTemplate(trace);
+    }
+
+    @GetMapping("/v5/request")
+    public String request(String itemId) {
+        return template.execute("OrderController.request()", new TraceCallback<>() {
+            @Override
+            public String call() {
+                orderService.orderItem(itemId);
+                return "ok";
+            }
+        });
+    }
+}
+```
+
+템플릿 콜백을 적용한 Service
+
+```java
+@Service
+public class OrderServiceV5 {
+
+    private final OrderRepositoryV5 orderRepository;
+    private final TraceTemplate template;
+
+    public OrderServiceV5(OrderRepositoryV5 orderRepository, LogTrace trace) {
+        this.orderRepository = orderRepository;
+        this.template = new TraceTemplate(trace);
+    }
+
+    public void orderItem(String itemId) {
+        template.execute("OrderService.orderItem()", () -> {
+            orderRepository.save(itemId);
+            return null;
+        });
+    }
+}
+```
