--- a/실무/동시성문제해결.md
+++ b/실무/동시성문제해결.md
@@ -1,1 +1,15 @@
 # 동시성 문제해결방법
+
+카프카 이용간 동시성 이슈가 생겨 주문 업데이트 순서가 꼬이게되는 현상이 있었다.
+
+이를 극복하기위해 학습한 내용들을 정리해봄
+
+
+### Synchronized
+
+### Pessimistic Lock
+### Optimistic Lock
+### Named Lock
+
+### Lettuce
+### Redission
