--- a/디자인패턴/데코레이터패턴.md
+++ b/디자인패턴/데코레이터패턴.md
@@ -1,17 +1,72 @@
 # 데코레이터 패턴
-데코레이터 패턴은 프록시와 마찬가지로 
-부가 기능 추가
-원래 서버가 제공하는 기능에 더해서 부가 기능을 수행한다. 예) 요청 값이나, 응답 값을 중간에 변형한다.
-예) 실행 시간을 측정해서 추가 로그를 남긴다.
+데코레이터 패턴은 프록시와 마찬가지로 프록시와 같은 대리자를 두어 런타임에 클라이언트 객체에 의존성 주입을 진행한다.
+
+하지만, 접근제어가 목적인 프록시 패턴과는 달리 의도가 원래 서버가 제공하는 기능에 더해서 부가 기능을 추가하는것에 있다.
+
+인터페이스
+```java
+public interface Component {
+    String operation();
+}
+```
+
+실제 비즈니스 로직
 
 ```java
+public class RealComponent implements Component {
+    @Override
+    public String operation() {
+        log.info("RealComponent 실행");
+        return "data";
+    }
+}
+```
+
+적용한 데코레이터로, 비즈니스 로직에서 받은 응답값을 변형하여 전달한다.
+
+```java
+public class MessageDecorator implements Component {
+
+    private Component component;
+
+    public MessageDecorator(Component component) {
+        this.component = component;
+    }
+
+    @Override
+    public String operation() {
+        log.info("MessageDecorator 실행");
+
+        //data -> *****data*****
+        String result = component.operation();
+        String decoResult = "*****" + result + "*****";
+        log.info("MessageDecorator 꾸미기 적용 전={}, 적용 후={}", result, decoResult);
+        return decoResult;
+    }
+}
 ```
 
 ```java
+public class DecoratorPatternClient {
+
+    private Component component;
+
+    public DecoratorPatternClient(Component component) {
+        this.component = component;
+    }
+
+    public void execute() {
+        String result = component.operation();
+        log.info("result={}", result);
+    }
+}
 ```
 
 ```java
-```
-
-```java
+public void decorator1() {
+      Component realComponent = new RealComponent();
+      Component messageDecorator = new MessageDecorator(realComponent);
+      DecoratorPatternClient client = new DecoratorPatternClient(messageDecorator);
+      client.execute();
+  }
 ```
