--- a/디자인패턴/프록시패턴.md
+++ b/디자인패턴/프록시패턴.md
@@ -57,6 +57,23 @@ public class CacheProxy implements Subject {
 }
 ```
 
+프록시 패턴을 사용하는 client는 호출하는 대상이 프록시 객체인지, Real 객체인지 알 필요없음
+
+```java
+public class ProxyPatternClient {
+
+    private Subject subject;
+
+    public ProxyPatternClient(Subject subject) {
+        this.subject = subject;
+    }
+
+    public void execute() {
+        subject.operation();
+    }
+}
+```
+
 `client -> cacheProxy -> realSubject` 
 
 실제 비즈니스 로직인 RealSubject 코드와 클라이언트 코드를 전혀 변경하지 않고, 프록시를 도입해서 접근 제어를 진행함
