--- a/디자인패턴/데코레이터패턴.md
+++ b/디자인패턴/데코레이터패턴.md
@@ -46,6 +46,8 @@ public class MessageDecorator implements Component {
 }
 ```
 
+데코레이터 패턴을 사용하는 client는 호출하는 대상이 프록시 객체인지, Real 객체인지 알 필요없음
+
 ```java
 public class DecoratorPatternClient {
 
@@ -62,11 +64,14 @@ public class DecoratorPatternClient {
 }
 ```
 
+적용한 데코레이터 패턴
+
 ```java
-public void decorator1() {
+public void decorator() {
       Component realComponent = new RealComponent();
       Component messageDecorator = new MessageDecorator(realComponent);
       DecoratorPatternClient client = new DecoratorPatternClient(messageDecorator);
       client.execute();
   }
 ```
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/4f2b7d0f-c974-477b-9425-2b9dda456e5a">
