--- a/Java/리플렉션.md
+++ b/Java/리플렉션.md
@@ -1,5 +1,5 @@
 # Reflection
-클래스나 메서드의 메타정보를 동적으로 획득하고, 코드도 동적으로 호출할 수 있다.
+클래스나 메서드의 메타정보를 런타임에 동적으로 획득하는 기술
 ```java
 public void reflection() throws Exception {
     //클래스 정보
