--- a/Spring/동적프록시.md
+++ b/Spring/동적프록시.md
@@ -3,6 +3,8 @@ Proxy를 적용할 클래스의 기본 코드와 로직은 거의 같고 적용 
 
 Controller, Service, Repository 각각의 layer별 Proxy를 만들지 않고 동적 프록시를 통해 한번에 해결이 가능하다.
 
+또한 인터페이스가 있을때만 적용이 가능하다. 인터페이스가 없는경우 CGLIB를 이용해 프록시 적용 가능
+
 ```java
 void dynamicA() {
     AInterface target = new AImpl();
