--- a/디자인패턴/프록시패턴.md
+++ b/디자인패턴/프록시패턴.md
@@ -1,7 +1,7 @@
 # 프록시 패턴
-프록시라는 대리자를 두어 런타임에 클라이언트 객체에 의존성 주입을 진행한다
+프록시라는 대리자를 두어 런타임에 클라이언트 객체에 의존성 주입을 진행한다.
 
-프록시 패턴은 크게 접근 제어의 역할을 하며 다음과 같은 기능구현에 사용된다
+프록시 패턴은 크게 접근 제어의 역할을 하며 다음과 같은 기능구현에 사용된다.
 - 권한에 따른 접근 차단 
 - 캐싱
 - 지연 로딩
