--- a/Spring/프록시팩토리.md
+++ b/Spring/프록시팩토리.md
@@ -1,1 +1,9 @@
 # 프록시 팩토리
+인터페이스가 있는 경우에는 JDK 동적 프록시를 적용하고, 그렇지 않은 경우에는 CGLIB를 적용하려면 어떻게 해야할까?
+
+- 스프링은 추상화된 개념으로 프록시 팩토리를 사용하여 `Advice` 를 호출하는 전용 `InvocationHandler` , `MethodInterceptor` 를 사용해 이를 해결한다.
+- 이를 통해 개발자는 부가기능을 적용할때는 Advice만 구현하면 된다.
+- 특정 Pattern에 따른 부가기능을 적용하고 싶다면? Point Cut을 이용하자.
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/d84aa7da-88fc-42bb-9d30-393b7ae050b5">
+
