--- a/Spring/프록시팩토리.md
+++ b/Spring/프록시팩토리.md
@@ -7,3 +7,91 @@
 
 <img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/d84aa7da-88fc-42bb-9d30-393b7ae050b5">
 
+Advice의 MethodInterceptor를 상속받아 구현한 `Advice` 이다. Cglib의 MethodInterceptor와 다른 패키지임
+
+```java
+public class TimeAdvice implements MethodInterceptor {
+    @Override
+    public Object invoke(MethodInvocation invocation) throws Throwable {
+        log.info("TimeProxy 실행");
+        long startTime = System.currentTimeMillis();
+
+        Object result = invocation.proceed();
+
+        long endTime = System.currentTimeMillis();
+        long resultTime = endTime - startTime;
+        log.info("TimeProxy 종료 resultTime={}", resultTime);
+        return result;
+    }
+}
+```
+
+
+인터페이스
+
+```java
+public interface ServiceInterface {
+    void save();
+    void find();
+}
+
+public class ServiceImpl implements ServiceInterface {
+    @Override
+    public void save() {
+        log.info("save 호출");
+    }
+
+    @Override
+    public void find() {
+        log.info("find 호출");
+    }
+}
+```
+
+동적 프록시를 적용
+
+```java
+@DisplayName("인터페이스가 있으면 JDK 동적 프록시 사용")
+    pubic void interfaceProxy() {
+        ServiceInterface target = new ServiceImpl();
+        ProxyFactory proxyFactory = new ProxyFactory(target);
+        proxyFactory.addAdvice(new TimeAdvice());
+        ServiceInterface proxy = (ServiceInterface) proxyFactory.getProxy();
+        log.info("targetClass={}", target.getClass());
+        log.info("proxyClass={}", proxy.getClass());
+
+        proxy.save();
+    }
+```
+
+구체 클래스
+
+```java
+public class ConcreteService {
+    public void call() {
+        log.info("ConcreteService 호출");
+    }
+}
+```
+
+Cglib를 적용
+
+```java
+@DisplayName("구체 클래스만 있으면 CGLIB 사용")
+    public void concreteProxy() {
+        ConcreteService target = new ConcreteService();
+        ProxyFactory proxyFactory = new ProxyFactory(target);
+        proxyFactory.addAdvice(new TimeAdvice());
+        ConcreteService proxy = (ConcreteService) proxyFactory.getProxy();
+        log.info("targetClass={}", target.getClass());
+        log.info("proxyClass={}", proxy.getClass());
+
+        proxy.call();
+    }
+```
+
+ProxyFactory의 ProxyTrrgetClass 설정을 True로 하면? 인터페이스가 있어도 Cglib를 사용
+
+```java
+proxyFactory.setProxyTargetClass(true);
+```
