--- a/Spring/프록시팩토리.md
+++ b/Spring/프록시팩토리.md
@@ -1,9 +1,11 @@
 # 프록시 팩토리
 인터페이스가 있는 경우에는 JDK 동적 프록시를 적용하고, 그렇지 않은 경우에는 CGLIB를 적용하려면 어떻게 해야할까?
 
-- 스프링은 추상화된 개념으로 프록시 팩토리를 사용하여 `Advice` 를 호출하는 전용 `InvocationHandler` , `MethodInterceptor` 를 사용해 이를 해결한다.
-- 이를 통해 개발자는 부가기능을 적용할때는 Advice만 구현하면 된다.
+- 스프링은 추상화 개념으로 프록시 팩토리를 사용하여 `Advice` 를 호출하는 전용 `InvocationHandler(인터페이스)` , `MethodInterceptor(구체 클래스)` 를 사용해 이를 해결한다.
+- 프록시 팩토리의 서비스 추상화 덕분에 구체적인 CGLIB, JDK 동적 프록시 기술에 의존하지 않고, 매우 편리하게 동적 프록시를 생성할 수 있다.
+- 프록시의 부가 기능 로직도 특정 기술에 종속적이지 않게 `Advice` 하나로 편리하게 사용할 수 있었다.
 - 특정 Pattern에 따른 부가기능을 적용하고 싶다면? Point Cut을 이용하자.
+
 
 <img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/d84aa7da-88fc-42bb-9d30-393b7ae050b5">
 
@@ -90,7 +92,9 @@ Cglib를 적용
     }
 ```
 
-ProxyFactory의 ProxyTrrgetClass 설정을 True로 하면? 인터페이스가 있어도 Cglib를 사용
+ProxyFactory의 ProxyTargetClass 설정을 True로 하면? 인터페이스가 있어도 Cglib를 사용
+
+스프링 부트의 기본설정은 ProxyTargetClass = True 이다.
 
 ```java
 proxyFactory.setProxyTargetClass(true);
