--- a/Spring/의존성주입방법비교.md
+++ b/Spring/의존성주입방법비교.md
@@ -4,23 +4,22 @@
 주입 방법:
 
 생성자 주입(Constructor Injection):
-클래스의 인스턴스를 생성하는 시점에 모든 필수 의존성이 주입되어야 하며, 이는 객체의 불변성(Immutability)을 강조하고 의존성이 존재하지 않는 상태에서 클래스를 생성할 수 없도록 한다.
+객체의 불변성(Immutability)을 강조하고 의존성이 존재하지 않는 상태에서 클래스를 생성할 수 없도록 한다.
 
 @Autowired:
-클래스의 인스턴스 생성시점과 분리되어 의존성 주입을 진행한다.
+의존성을 선택적으로 주입할 수 있다.
 
-일반적으로 필드 주입 또는 세터 주입과 함께 사용되며, 주입할 대상을 자동으로 탐지하고 주입한다.
-생성자 주입과 달리, @Autowired를 사용하면 의존성을 선택적으로 주입할 수 있다.
+Bean의 생명주기
+스프링 컨테이너 생성 → 스프링 빈 생성 → 의존관계 주입 → 초기화 콜백 메소드 호출 → 사용 → 소멸 전 콜백 메소드 호출 → 스프링 종료
 ```
 ```
 의존성 주입 시점:
 
 생성자 주입(Constructor Injection):
-생성자 주입은 객체 인스턴스를 생성하는 시점에 의존성이 주입되어 객체의 불변성을 보장하며, 해당 클래스의 인스턴스가 생성될 때 의존성이 필요하다.
+생성자 주입은 객체 인스턴스를 생성하는 시점에 의존성이 주입된다.
 
 @Autowired:
 @Autowired를 사용한 주입은 스프링 컨테이너가 빈을 생성하고 초기화한 후에 주입되므로, 해당 빈이 생성된 이후에 의존성이 주입된다.
-주입되는 의존성이 선택적으로 변경될 수 있다.
 ```
 ```
 가독성 및 유연성:
