--- a/Spring/빈후처리기.md
+++ b/Spring/빈후처리기.md
@@ -1,1 +1,14 @@
 # 빈 후처리기
+
+**1. 생성:** 스프링 빈 대상이 되는 객체를 생성한다. ( `@Bean` , 컴포넌트 스캔 모두 포함)
+
+**2. 전달:** 생성된 객체를 빈 저장소에 등록하기 직전에 빈 후처리기에 전달한다.
+
+**3. 후 처리 작업:** 빈 후처리기는 전달된 스프링 빈 객체를 조작하거나 다른 객체로 바뀌치기 할 수 있다.
+
+**4. 등록:** 빈 후처리기는 빈을 반환한다. 전달 된 빈을 그대로 반환하면 해당 빈이 등록되고, 바꿔치기하면 다른 객체가 빈 저장소에 등록된다.
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/ed9f3b08-3c1c-4306-bdc3-35a775a63b11">
+
+```java
+```
