--- a/Spring/빈후처리기.md
+++ b/Spring/빈후처리기.md
@@ -10,9 +10,106 @@
 
 <img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/ed9f3b08-3c1c-4306-bdc3-35a775a63b11">
 
-```java
+`aspectjweaver` 라는 `aspectJ` 관련 라이브러리를 등록하고, 스프링 부트가 AOP 관련 클래스를 자동으로 Bean으로 등록
+
+스프링 부트가 아니라면  `@EnableAspectJAutoProxy` annotation으로 등록이 필요함
+
+```gradle
+implementation 'org.springframework.boot:spring-boot-starter-aop'
 ```
+
+`AnnotationAwareAspectJAutoProxyCreator` 라는 빈 후처리기가 스프링 빈에 등록되어 
+
+스프링 빈으로 등록된 `Advisor` 들을 자동으로 찾아서 `PointCut` 에 의해 프록시가 필요한 곳에 프록시를 적용해준다. (@AspectJ로 된 Bean들도)
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/80f09e60-1b26-4766-a42b-ea05bcb9e91b">
+
+프록시 팩토리와 마찬가지로 하나의 프록시에 여러 어드바이저가 적용된 형태로 구성된다.
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/27b124c7-1bff-41f4-bb3a-7173e250850a">
+
+아래와 같이 AspectJExpressionPointcut를 통해 표현식으로 원하는 package, 원하지 않는 package를 분리하여 advisor를 만들어준다.
+
+그러면 springboot가 빈 후처리기를 통해 프록시로 등록할 어드바이저들을 확인
+
 ```java
+@Configuration
+@Import(AppConfig.class)
+public class AutoProxyConfig {
+    @Bean
+    public Advisor advisor3(LogTrace logTrace) {
+        //pointcut
+        AspectJExpressionPointcut pointcut = new AspectJExpressionPointcut();
+        pointcut.setExpression("execution(* hello.proxy.app..*(..)) && !execution(* hello.proxy.app..noLog(..))");
+        //advice
+        LogTraceAdvice advice = new LogTraceAdvice(logTrace);
+        return new DefaultPointcutAdvisor(pointcut, advice);
+    }
+}
 ```
+bean으로 등록할 controller, service, repository
+
 ```java
+@Configuration
+public class AppConfig {
+    @Bean
+    public OrderController orderController() {
+        return new OrderControllerImpl(orderService());
+    }
+
+    @Bean
+    public OrderServiceV1 orderService() {
+        return new OrderServiceImpl(orderRepository());
+    }
+
+    @Bean
+    public OrderRepository orderRepository() {
+        return new OrderRepositoryImpl();
+    }
+}
 ```
+
+사용한 advice
+
+```java
+public class LogTraceAdvice implements MethodInterceptor {
+
+    private final LogTrace logTrace;
+
+    public LogTraceAdvice(LogTrace logTrace) {
+        this.logTrace = logTrace;
+    }
+
+    @Override
+    public Object invoke(MethodInvocation invocation) throws Throwable {
+        TraceStatus status = null;
+        try {
+            Method method = invocation.getMethod();
+            String message = method.getDeclaringClass().getSimpleName() + "." +
+                    method.getName() + "()";
+            status = logTrace.begin(message);
+
+            //로직 호출
+            Object result = invocation.proceed();
+
+            logTrace.end(status);
+            return result;
+        } catch (Exception e) {
+            logTrace.exception(status, e);
+            throw e;
+        }
+    }
+}
+```
+
+포인트컷은 2가지에 사용된다.
+
+**1. 프록시 적용 여부 판단 - 생성 단계**
+
+클래스 + 메서드 조건을 모두 비교한다. 
+
+이때 모든 메서드를 체크하는데, 포인트컷 조건에 하나하나 매칭해 본다. 만약 조건에 맞는 것이 하나라도 있으면 프록시를 생성한다.
+
+**2. 어드바이스 적용 여부 판단 - 사용 단계**
+
+프록시가 호출되었을 때 부가 기능인 어드바이스를 적용할지 말지 포인트컷을 보고 판단한다.
