--- a/실무/동시성문제해결.md
+++ b/실무/동시성문제해결.md
@@ -2,14 +2,16 @@
 
 카프카 이용간 동시성 이슈가 생겨 주문 업데이트 순서가 꼬이게되는 현상이 있었다.
 
-이를 극복하기위해 학습한 내용들을 정리해봄
-
+이를 해결하기 위해 적용하며 학습한 내용들을 정리해보았다.
 
 ### Synchronized
 
 ### Pessimistic Lock
+
 ### Optimistic Lock
+
 ### Named Lock
 
 ### Lettuce
+
 ### Redission
