--- a/Java/제네릭.md
+++ b/Java/제네릭.md
@@ -1,6 +1,7 @@
 # 제네릭
 
-잘못된 타입 사용으로 발생할 수 있는 에러를 컴파일 타임에 잡을 수 있는 기술
+- 잘못된 타입 사용으로 발생할 수 있는 에러를 컴파일 타임에 잡을 수 있는 기술
+- 불필요한 캐스팅을 없애 성능 향상
 
 제네릭 적용 전
 ```java
@@ -18,4 +19,49 @@ List<Integer> list = new LinkedList<>();
 
 list.add(1);
 Integer i = list.iterator().next();
+```
+
+제네릭 적용 전
+
+```java
+Apple[] arr = { new Apple(), new Apple(), new Apple() };
+FruitBox box = new FruitBox(arr);
+
+Apple apple1 = (Apple) box.getFruit(0);
+Apple apple2 = (Apple) box.getFruit(1);
+Apple apple3 = (Apple) box.getFruit(2);
+```
+
+제네릭 적용 후
+
+```java
+FruitBox<Apple> box = new FruitBox<>(arr);
+
+Apple apple = box.getFruit(0);
+Apple apple = box.getFruit(1);
+Apple apple = box.getFruit(2);
+```
+
+### 제네릭 메서드
+제네릭 메서드란, 메서드의 선언부에 <T> 가 선언된 메서드를 말한다.
+
+제네릭 메서드는 직접 메서드에 <T> 제네릭을 설정함으로서 동적으로 타입을 받아와 사용할 수 있는 메서드이다.
+```java
+class Shop<T> {
+	
+    // 클래스의 타입 파라미터를 받아와 사용하는 일반 메서드
+    public T order(T x, T y) {
+        // ...
+    }
+    
+    // 동적으로 타입 할당 운영되는 제네릭 메서드
+    public static <T> T orderStatic(T x, T y) {
+        // ...
+    }
+}
+
+//호출
+orderStatic.<String>orderStatic(1234, 1235);
+//컴파일러가 파라미터를 통해 추론 가능하므로 제네릭 생략 가능
+orderStatic.orderStatic(1234,1235);
 ```
