--- a/디자인패턴/빌더패턴.md
+++ b/디자인패턴/빌더패턴.md
@@ -7,6 +7,11 @@
   
 단점
 - 원하는 객체를 만들려면 빌더부터 만들어야 한다.
+
+스프링 사용 예제
+- StringBuilder, StreamBuilder
+
+### 예제
   
 <img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/d431198e-8e88-4725-a31e-91134f1e3c4b">
 
