--- a/디자인패턴/어댑터패턴.md
+++ b/디자인패턴/어댑터패턴.md
@@ -1,1 +1,62 @@
 # 어댑터 패턴
+기존 코드를 클라이언트가 사용하는 인터페이스의 구현체로 바꿔주는 패턴
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/3fabe65b-651e-482d-bf98-e1e487df2945">
+
+장점
+- 기존 코드를 변경하지 않고 원하는 인터페이스 구현체를 만들어 재사용할 수 있다.(개방-폐쇠원칙)
+- 기존 코드가 하던 일과 특정 인터페이스 구현체로 변환하는 작업을 각기 다른 클래스로 분리하여 관리할 수 있다.(단일책임원칙)
+
+ 단점
+- 새 클래스가 생겨 복잡도가 증가할 수 있다. 경우에 따라서는 기존 코드가 해당 인터페이스를 구현하도록 수정하는 것이 좋은 선택이 될 수도 있다.
+
+실제 사용 예시
+```java
+public static void main(String[] args) {
+	// String 배열 : adaptee 기존 서비스
+    String[] s = {"a", "b", "c"};
+    
+    // List<String> : target 인터페이스
+    List<String> list = null;
+    
+    // Arrays.asList() : adapter 기존 서비스 배열을 리스트로 변환 & 호환하게 해주는 역할
+    list = Arrays.asList(s);
+}
+```
+
+클라이언트에서 사용할 추상화된 인터페이스
+
+```java
+interface Target {
+    void method(int data);
+}
+```
+
+클라이언트에 사용하고 싶으나, 바로 사용 불가(Target과 호환되지 않음)
+
+```java
+class Adaptee {
+    void specificOperation(int data) {
+        System.out.println("기존 서비스 기능 호출 + " + data);
+    }
+}
+```
+
+Adaptee 서비스를 클라이언트에서 사용하게 할 수 있도록 호환 처리 해주는 어댑터
+
+```java
+class Adapter implements Target {
+    Adaptee adaptee;
+
+    //생성자를 통해 초기화
+    Adapter(Adaptee adaptee) {
+        this.adaptee = adaptee;
+    }
+
+    //어댑터의 메소드가 호출되면, Adaptee의 메소드를 호출하도록
+    @Override
+    public void method(int data) {
+        adaptee.specificOperation(data); // 위임
+    }
+}
+```
