--- a/디자인패턴/어댑터패턴.md
+++ b/디자인패턴/어댑터패턴.md
@@ -4,7 +4,7 @@
 <img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/3fabe65b-651e-482d-bf98-e1e487df2945">
 
 장점
-- 기존 코드를 변경하지 않고 원하는 인터페이스 구현체를 만들어 재사용할 수 있다.(개방-폐쇠원칙)
+- 기존 코드를 변경하지 않고 원하는 인터페이스 구현체를 만들어 재사용할 수 있다.(개방-폐쇄원칙)
 - 기존 코드가 하던 일과 특정 인터페이스 구현체로 변환하는 작업을 각기 다른 클래스로 분리하여 관리할 수 있다.(단일책임원칙)
 
  단점
