--- a/디자인패턴/브릿지패턴.md
+++ b/디자인패턴/브릿지패턴.md
@@ -1,16 +1,90 @@
 # 브릿지 패턴
 추상적인 것과 구체적인 것을 분리하여 연결하는 패턴
 
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/641f5b7f-6768-45c4-96ac-938becb7a3e8">
+
 장점
-- 추상적인 코드를 구체적인 코드 변경 없이도 독립적으로 확장할 수 있다.(개방-폐쇄원칙)
-- 추상적인 코드과 구체적인 코드를 분리하여 수 있다.
+- 추상적인 코드를 구체적인 코드 변경 없이도 확장할 수 있다.(개방-폐쇄원칙)
+- 추상적인 코드과 구체적인 코드를 분리할수있다.
 
 단점
 - 계층 구조가 늘어나 복잡도가 증가할 수 있다.
 
+실사용 예제
+- JDBC, PlatformTransactionManger
+
+하위 인터페이스(하위의 추상적인 것)
+
 ```java
+public interface Type{
+    String getShape();
+    String getColor();
+}
 ```
+
+하위 인터페이스를 상속받은 객체(하위의 구체적인 것)
+
 ```java
+public class 백두산 implements Type {
+    @Override
+    String getShape(){
+        return "sharp";
+    };
+
+    @Override
+    String getColor(){
+        return "white";
+    };
+}
 ```
+
+상위 인터페이스(상위의 추상적인 것)
+
 ```java
+public interface Animal{
+    void move();
+    void eat();
+}
+```
+
+브릿지 패턴을 적용한 상위 인터페이스(상위의 구체적인 것)
+
+```java
+public class DefaultAnimal implements Animal {
+    private Type type;
+    private String name;
+
+    public DefaultChampion(Type type, String name) {
+        this.type = type;
+        this.name = name;
+    }
+
+    @Override
+    public void move() {
+        System.out.printf("%s %s %s move\n", type.getShape(), type.getColor(), name);
+    }
+
+    @Override
+    public void eat() {
+        System.out.printf("%s %s %s eat\n", type.getShape(), type.getColor(), name);
+```
+
+상위 인터페이스를 상속받은 객체(상위의 구체적인 것)
+
+```java
+public class 호랑이 extends DefaultAnimal {
+    public 호랑이(Type type) {
+        super(type, "호랑이");
+    }
+}
+```
+
+Client의 사용예제
+
+```java
+public static void main(String[] args) {
+        Animal 호랑이 = new 호랑이(new 백두산());
+        호랑이.move();
+        호랑이.eat();
+    }
 ```
