--- a/디자인패턴/컴포짓패턴.md
+++ b/디자인패턴/컴포짓패턴.md
@@ -1,1 +1,87 @@
 # 컴포짓 패턴
+
+Component
+
+```java
+// Component interface
+interface FileSystemComponent {
+    String getName();
+    int getSize();
+}
+```
+
+Leaf class
+
+```java
+class File implements FileSystemComponent {
+    private String name;
+    private int size;
+
+    public File(String name, int size) {
+        this.name = name;
+        this.size = size;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public int getSize() {
+        return size;
+    }
+}
+```
+
+Composite class
+
+```java
+class Folder implements FileSystemComponent {
+    private String name;
+    private List<FileSystemComponent> children;
+
+    public Folder(String name) {
+        this.name = name;
+        this.children = new ArrayList<>();
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public int getSize() {
+        int totalSize = 0;
+        for (FileSystemComponent component : children) {
+            totalSize += component.getSize();
+        }
+        return totalSize;
+    }
+
+    public void add(FileSystemComponent component) {
+        children.add(component);
+    }
+
+    public void remove(FileSystemComponent component) {
+        children.remove(component);
+    }
+}
+```
+
+```java
+// Client code
+public class Main {
+    public static void main(String[] args) {
+        File file1 = new File("example.txt", 10);
+        File file2 = new File("image.jpg", 200);
+
+        Folder folder1 = new Folder("Folder 1");
+        folder1.add(file1);
+
+        Folder folder2 = new Folder("Folder 2");
+        folder2.add(folder1);
+        folder2.add(file2);
+
+        System.out.println("Size of folder1: " + folder1.getSize());  // 폴더 1의 크기
+        System.out.println("Size of folder2: " + folder2.getSize());  // 폴더 2의 크기
+    }
+}
+```
