--- a/디자인패턴/컴포짓패턴.md
+++ b/디자인패턴/컴포짓패턴.md
@@ -1,4 +1,15 @@
 # 컴포짓 패턴
+전체와 개별 객체를 동일하게 처리할 수 있는 패턴
+
+장점
+- 파일시스템과 같이 복잡한 트리 구조를 편리하게 사용할 수 있다.
+- 클라이언트 코드를 변경하지 않고 새로운 엘리먼트 타입을 추가할 수 있다.
+
+단점
+- 트리구조를 만들어야 하기 때문에 지나치게 일반화 해야 하는 경우도 생길 수 있다.
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/bd5b9d66-b2f6-41f7-9446-eda147357905">
+
 
 Component
 
