--- a/디자인패턴/퍼사드패턴.md
+++ b/디자인패턴/퍼사드패턴.md
@@ -1,1 +1,67 @@
 # 퍼사트 패턴
+복잡한 시스템의 의존성을 사용자가 사용하기 간편하게 추상화를 통해 최소화한 패턴
+
+복잡한 Subsystem 클래스들
+
+```java
+class CPU {
+    public void freeze() {
+        System.out.println("CPU를 멈춤");
+    }
+    
+    public void jump(long position) {
+        System.out.println("CPU가 " + position + " 위치로 이동");
+    }
+    
+    public void execute() {
+        System.out.println("CPU가 실행");
+    }
+}
+
+class Memory {
+    public void load(long position, byte[] data) {
+        System.out.println("메모리에 " + data.length + " 바이트 데이터 로드");
+    }
+}
+
+class HardDrive {
+    public byte[] read(long lba, int size) {
+        System.out.println(size + " 바이트 데이터를 HDD에서 읽음");
+        return new byte[size];
+    }
+}
+```
+
+퍼사드 클래스(Client에서는 해당하는 퍼사드를 호출하여 복잡한 Computer 시작이라는 기능을 쉽게 접근)
+
+```java
+class ComputerFacade {
+    private CPU cpu;
+    private Memory memory;
+    private HardDrive hardDrive;
+
+    public ComputerFacade() {
+        this.cpu = new CPU();
+        this.memory = new Memory();
+        this.hardDrive = new HardDrive();
+    }
+
+    public void start() {
+        cpu.freeze();
+        memory.load(0, hardDrive.read(0, 1024));
+        cpu.jump(1024);
+        cpu.execute();
+    }
+}
+```
+
+Client 클래스
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        ComputerFacade computer = new ComputerFacade();
+        computer.start();
+    }
+}
+```
