--- a/디자인패턴/플라이웨이트패턴.md
+++ b/디자인패턴/플라이웨이트패턴.md
@@ -1,1 +1,69 @@
-# 플라이 웨이트 패턴
+# 플라이웨이트 패턴
+캐시 개념을 코드로 패턴화한 구조로 재사용 가능한 객체 인스턴스를 공유시켜 메모리 사용량을 최소화하는 구조 패턴이다.
+
+자주 변하는 속성(extrinsit)과 변하지 않는 속성(intrinsit)을 분리하고, 변하지 않는 속성을 재사용하여 메모리 사용을 줄일 수 있다.
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/0373b935-d1fd-44ff-9a21-04885f6d3127">
+
+플라이웨이트 인터페이스
+
+```java
+interface Shape {
+    void draw();
+}
+```
+
+인터페이스를 상속받은 구체 클래스
+
+```java
+class Circle implements Shape {
+    private String color;
+
+    public Circle(String color) {
+        this.color = color;
+    }
+
+    @Override
+    public void draw() {
+        System.out.println("원을 그립니다. 색깔: " + color);
+    }
+}
+```
+
+플라이웨이트 팩토리 클래스
+
+```java
+class ShapeFactory {
+    private static final HashMap<String, Shape> circleMap = new HashMap<>();
+
+    public static Shape getCircle(String color) {
+        Circle circle = (Circle) circleMap.get(color);
+
+        if (circle == null) {
+            circle = new Circle(color);
+            circleMap.put(color, circle);
+            System.out.println(color + " 색깔의 새로운 원을 만듭니다.");
+        }
+        return circle;
+    }
+}
+```
+
+Client 클래스
+
+```java
+public class Main {
+    private static final String colors[] = { "빨강", "초록", "파랑", "노랑", "하양" };
+
+    public static void main(String[] args) {
+        for (int i = 0; i < 20; ++i) {
+            Circle circle = (Circle) ShapeFactory.getCircle(getRandomColor());
+            circle.draw();
+        }
+    }
+
+    private static String getRandomColor() {
+        return colors[(int) (Math.random() * colors.length)];
+    }
+}
+```
