--- a/디자인패턴/프록시패턴.md
+++ b/디자인패턴/프록시패턴.md
@@ -1,19 +1,20 @@
 # 프록시 패턴
-프록시라는 대리자를 두어 런타임에 클라이언트 객체에 의존성 주입을 진행한다.
-
-프록시 패턴은 크게 접근 제어의 역할을 하며 다음과 같은 기능구현에 사용된다.
+프록시라는 대리자를 두어 접근 제어의 역할을 하며 다음과 같은 기능구현에 사용된다.
 - 권한에 따른 접근 차단 
 - 캐싱
 - 지연 로딩
 
-인터페이스
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/e2d26ddd-165e-44bc-af5b-49c92d7501be">
+
+비즈니스 로직 인터페이스
+
 ```java
 public interface Subject {
     String operation();
 }
 ```
 
-실제 비즈니스 로직 - 1초정도 걸린다고 가정
+비즈니스 로직 구체 클래스 - 1초정도 걸린다고 가정
 
 ```java
 public class RealSubject implements Subject {
@@ -88,5 +89,3 @@ public void cacheProxyTest() {
         client.execute();
     }
 ```
-
-<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/e2d26ddd-165e-44bc-af5b-49c92d7501be">
