--- a/디자인패턴/데코레이터패턴.md
+++ b/디자인패턴/데코레이터패턴.md
@@ -1,16 +1,19 @@
 # 데코레이터 패턴
 데코레이터 패턴은 프록시와 마찬가지로 프록시와 같은 대리자를 두어 런타임에 클라이언트 객체에 의존성 주입을 진행한다.
 
-하지만, 접근제어가 목적인 프록시 패턴과는 달리 의도가 원래 서버가 제공하는 기능에 더해서 부가 기능을 추가하는것에 있다.
+하지만, 접근제어가 목적인 프록시 패턴과는 달리, 원래 서버가 제공하는 기능에 더해서 '부가기능을 추가' 하는것에 있다.
 
-인터페이스
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/4f2b7d0f-c974-477b-9425-2b9dda456e5a">
+
+비즈니스 로직 인터페이스
+
 ```java
 public interface Component {
     String operation();
 }
 ```
 
-실제 비즈니스 로직
+비즈니스 로직 구체 클래스
 
 ```java
 public class RealComponent implements Component {
@@ -74,4 +77,3 @@ public void decorator() {
       client.execute();
   }
 ```
-<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/4f2b7d0f-c974-477b-9425-2b9dda456e5a">
