--- a/디자인패턴/책임연쇄패턴.md
+++ b/디자인패턴/책임연쇄패턴.md
@@ -3,8 +3,7 @@
 
 장점
 - 클라이언트 코드를 변경하지 않고 새로운 핸들러를 체인에 추가할 수 있다.
-- 각각의 체인은 자신이 해야하는 일만 한다.
-- 체인을 다양한 방법으로 구성할 수 있다.
+- 특정 순서에 맞게 각각의 체인은 자신이 해야하는 일만 한다.
   
 단점
 - 디버깅이 복잡할 수 있다.
