--- a/디자인패턴/책임연쇄패턴.md
+++ b/디자인패턴/책임연쇄패턴.md
@@ -52,6 +52,9 @@ public class PrintRequestHandler extends RequestHandler {
 
     @Override
     public void handle(Request request) {
+        //출력할 값이 없을때 예외처리 가능
+        if(request.getBody() == null) return null;
+
         System.out.println(request.getBody());
         super.handle(request);
     }
@@ -64,6 +67,9 @@ public class AuthRequestHandler extends RequestHandler {
 
     @Override
     public void handle(Request request) {
+        //인증값이 다를때 예외처리 가능
+        if(request.getBody() == null) return null;
+
         System.out.println("인증이 되었는가?");
         super.handle(request);
     }
