--- a/디자인패턴/인터프리터패턴.md
+++ b/디자인패턴/인터프리터패턴.md
@@ -6,3 +6,134 @@
 
 TermianlExpression, NonTerminalExpression이 Leaf인, 구조적 디자인 패턴인 컴포짓 패턴과 유사하게 생겼음
 
+아래는 PostFix로 들어온 입력을 계산하는 코드이다. 이 코드를 인터프리터 패턴으로 변경한다.
+
+```java
+public class PostfixNotation {
+    private final String expression;
+
+    public PostfixNotation(String expression) {
+        this.expression = expression;
+    }
+
+    public static void main(String[] args) {
+        PostfixNotation postfixNotation = new PostfixNotation("123+-");
+        postfixNotation.calculate();
+    }
+
+    //Expression이 될 부분
+    private void calculate() {
+        Stack<Integer> numbers = new Stack<>();
+
+        for (char c : this.expression.toCharArray()) {
+            switch (c) {
+                case '+':
+                    numbers.push(numbers.pop() + numbers.pop());
+                    break;
+                case '-':
+                    int right = numbers.pop();
+                    int left = numbers.pop();
+                    numbers.push(left - right);
+                    break;
+                default:
+                    numbers.push(Integer.parseInt(c + ""));
+            }
+        }
+
+        System.out.println(numbers.pop());
+    }
+}
+```
+
+Expression 인터페이스
+
+```java
+public interface PostfixExpression {
+    int interpret(Map<Character, Integer> context);
+}
+```
+
+연산자는 +, -, 변수연산만 생성하였다. (Non-TerminationExpression)
+
+```java
+public class MinusExpression implements PostfixExpression {
+    private PostfixExpression left;
+    private PostfixExpression right;
+
+    public MinusExpression(PostfixExpression left, PostfixExpression right) {
+        this.left = left;
+        this.right = right;
+    }
+
+    @Override
+    public int interpret(Map<Character, Integer> context) {
+        return left.interpret(context) - right.interpret(context);
+    }
+}
+
+public class PlusExpression implements PostfixExpression {
+    private PostfixExpression left;
+    private PostfixExpression right;
+
+    public PlusExpression(PostfixExpression left, PostfixExpression right) {
+        this.left = left;
+        this.right = right;
+    }
+
+    @Override
+    public int interpret(Map<Character, Integer> context) {
+        return left.interpret(context) + right.interpret(context);
+    }
+}
+
+public class VariableExpression implements PostfixExpression {
+    private Character character;
+
+    public VariableExpression(Character character) {
+        this.character = character;
+    }
+
+    @Override
+    public int interpret(Map<Character, Integer> context) {
+        return context.get(this.character);
+    }
+}
+```
+
+Parser를 통해 계산을 진행한다.(TerminationExpression)
+
+```java
+public class PostfixParser {
+    public static PostfixExpression parse(String expression) {
+        Stack<PostfixExpression> stack = new Stack<>();
+        for (char c : expression.toCharArray()) {
+            stack.push(getExpression(c, stack));
+        }
+        //최종 연산값을 pop
+        return stack.pop();
+    }
+
+    private static PostfixExpression getExpression(char c, Stack<PostfixExpression> stack) {
+        switch (c) {
+            case '+':
+                return new PlusExpression(stack.pop(), stack.pop());
+            case '-':
+                PostfixExpression right = stack.pop();
+                PostfixExpression left = stack.pop();
+                return new MinusExpression(left, right);
+            default:
+                return new VariableExpression(c);
+        }
+    }
+}
+```
+
+인터프리터 패턴을 적용한 Client
+
+```java
+public static void main(String[] args) {
+        PostfixExpression expression = PostfixParser.parse("xyz+-a+");
+        int result = expression.interpret(Map.of('x', 1, 'y', 2, 'z', 3, 'a', 4));
+        System.out.println(result);
+    }
+```
