--- a/디자인패턴/인터프리터패턴.md
+++ b/디자인패턴/인터프리터패턴.md
@@ -85,7 +85,11 @@ public class PlusExpression implements PostfixExpression {
         return left.interpret(context) + right.interpret(context);
     }
 }
+```
 
+피연산자를 반환한다.(TerminationExpression)
+
+```java
 public class VariableExpression implements PostfixExpression {
     private Character character;
 
@@ -100,7 +104,7 @@ public class VariableExpression implements PostfixExpression {
 }
 ```
 
-Parser를 통해 계산을 진행한다.(TerminationExpression)
+Context 클래스로 연산을 진행한다.
 
 ```java
 public class PostfixParser {
