--- a/디자인패턴/상태패턴.md
+++ b/디자인패턴/상태패턴.md
@@ -1,1 +1,180 @@
-# 상태 패턴
+# 상태패턴
+객체 내부 상태 변경에 따라 객체의 행동이 달라지는 패턴
+- 상태들을 분리해 낼 수 있으며, 새로운 상태를 추가하더라도 다른 로직에 영향을 주지 않는다.
+  
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/18a68b0c-2538-4077-b32e-6ca4fb961089">
+
+상태 인터페이스
+
+```java
+public interface State {
+    void addReview(String review, Student student);
+    void addStudent(Student student);
+}
+```
+
+아무나 들을 수 있는 강의(구체 클래스)
+
+```java
+public class Published implements State {
+    private OnlineCourse onlineCourse;
+
+    public Published(OnlineCourse onlineCourse) {
+        this.onlineCourse = onlineCourse;
+    }
+
+    @Override
+    public void addReview(String review, Student student) {
+        this.onlineCourse.getReviews().add(review);
+    }
+
+    @Override
+    public void addStudent(Student student) {
+        this.onlineCourse.getStudents().add(student);
+    }
+}
+```
+
+비공개 강의(구체 클래스)
+
+```java
+public class Private implements State {
+    private OnlineCourse onlineCourse;
+
+    public Private(OnlineCourse onlineCourse) {
+        this.onlineCourse = onlineCourse;
+    }
+
+    @Override
+    public void addReview(String review, Student student) {
+        if (this.onlineCourse.getStudents().contains(student)) {
+            this.onlineCourse.getReviews().add(review);
+        } else {
+            throw new UnsupportedOperationException("프라이빗 코스를 수강하는 학생만 리뷰를 남길 수 있습니다.");
+        }
+    }
+
+    @Override
+    public void addStudent(Student student) {
+        if (student.isAvailable(this.onlineCourse)) {
+            this.onlineCourse.getStudents().add(student);
+        } else {
+            throw new UnsupportedOperationException("프라이빛 코스를 수강할 수 없습니다.");
+        }
+    }
+}
+```
+
+초안 강의(구체 클래스)
+
+```java
+public class Draft implements State {
+    private OnlineCourse onlineCourse;
+
+    public Draft(OnlineCourse onlineCourse) {
+        this.onlineCourse = onlineCourse;
+    }
+
+    @Override
+    public void addReview(String review, Student student) {
+        throw new UnsupportedOperationException("드래프트 상태에서는 리뷰를 남길 수 없습니다.");
+    }
+
+    @Override
+    public void addStudent(Student student) {
+        this.onlineCourse.getStudents().add(student);
+        if (this.onlineCourse.getStudents().size() > 1) {
+            this.onlineCourse.changeState(new Private(this.onlineCourse));
+        }
+    }
+}
+```
+
+Student(Client)
+
+```java
+public class Student {
+    private String name;
+
+    public Student(String name) {
+        this.name = name;
+    }
+
+    private Set<OnlineCourse> onlineCourses = new HashSet<>();
+
+    public boolean isAvailable(OnlineCourse onlineCourse) {
+        return onlineCourses.contains(onlineCourse);
+    }
+
+    public void addPrivate(OnlineCourse onlineCourse) {
+        this.onlineCourses.add(onlineCourse);
+    }
+
+    @Override
+    public String toString() {
+        return "Student{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+}
+```
+
+온라인 강의(Context)
+
+```java
+public class OnlineCourse {
+    //최초 상태를 draft로 초기화
+    private State state = new Draft(this);
+    private List<Student> students = new ArrayList<>();
+    private List<String> reviews = new ArrayList<>();
+
+    public void addStudent(Student student) {
+        this.state.addStudent(student);
+    }
+
+    public void addReview(String review, Student student) {
+        this.state.addReview(review, student);
+    }
+
+    public State getState() {
+        return state;
+    }
+
+    public List<Student> getStudents() {
+        return students;
+    }
+
+    public List<String> getReviews() {
+        return reviews;
+    }
+
+    public void changeState(State state) {
+        this.state = state;
+    }
+}
+```
+
+상태패턴을 적용
+
+```java
+public static void main(String[] args) {
+    //Context를 호출
+    OnlineCourse onlineCourse = new OnlineCourse();
+    //Client들을 초기화 한다.
+    Student student = new Student("whiteship");
+    Student keesun = new Student("keesun");
+    keesun.addPrivate(onlineCourse);
+
+    onlineCourse.addStudent(student);
+
+    onlineCourse.changeState(new Private(onlineCourse));
+
+    onlineCourse.addReview("hello", student);
+
+    onlineCourse.addStudent(keesun);
+
+    System.out.println(onlineCourse.getState());
+    System.out.println(onlineCourse.getReviews());
+    System.out.println(onlineCourse.getStudents());
+}
+```
