--- a/디자인패턴/비지터패턴.md
+++ b/디자인패턴/비지터패턴.md
@@ -1,1 +1,96 @@
 # 비지터 패턴
+
+기존 코드를 변경하지 않고 새로운 코드를 추가할 수 있다.
+추가 기능을 한 곳에 모아둘 수 있다.
+
+<img width="800" alt="image" src="https://github.com/hanuk96/TIL/assets/12428689/985774fc-e488-41e0-9fcc-23bc7fa78f5f">
+
+Device 인터페이스(Visitor)
+
+```java
+public interface Device {
+    void print(Circle circle);
+    void print(Rectangle rectangle);
+    void print(Triangle triangle);
+}
+```
+
+Device의 구체 클래스(Concrete Visitor)
+
+```java
+public class Pad implements Device {
+    @Override
+    public void print(Circle circle) {
+        System.out.println("Print Circle to Pad");
+    }
+
+    @Override
+    public void print(Rectangle rectangle) {
+        System.out.println("Print Rectangle to Pad");
+    }
+
+    @Override
+    public void print(Triangle triangle) {
+        System.out.println("Print Triangle to Pad");
+    }
+}
+
+public class Phone implements Device {
+    @Override
+    public void print(Circle circle) {
+        System.out.println("Print Circle to Phone");
+    }
+
+    @Override
+    public void print(Rectangle rectangle) {
+        System.out.println("Print Rectangle to Phone");
+
+    }
+
+    @Override
+    public void print(Triangle triangle) {
+        System.out.println("Print Triangle to Phone");
+    }
+}
+```
+
+Shape로 Visitor가 해당 내용을 순회한다.(Element)
+
+```java
+public interface Shape {
+    void accept(Device device);
+}
+```
+
+구체 Shape(Concrete Element)
+
+```java
+public class Circle implements Shape {
+    @Override
+    public void accept(Device device) {
+        device.print(this);
+    }
+}
+public class Rectangle implements Shape {
+    @Override
+    public void accept(Device device) {
+        device.print(this);
+    }
+}
+public class Triangle implements Shape {
+    @Override
+    public void accept(Device device) {
+        device.print(this);
+    }
+}
+```
+
+Element를 선언한뒤, Visitor를 통해 순회한다.
+
+```java
+public static void main(String[] args) {
+    Shape rectangle = new Rectangle();
+    Device device = new Pad();
+    rectangle.accept(device);
+}
+```
