--- a/Spring/트랜잭션.md
+++ b/Spring/트랜잭션.md
@@ -27,10 +27,7 @@ public void tx() {
 }
 ```
 
-트랜잭션의 적용 위치에 따른 우선순위는 항상 더 구체적이고 자세한 것이 높은 우선순위를 가진다. 또한 클래스에 적용하면 메서드는 자동 적용한다.
-
-추가로 인터페이스에 `@Transactional` 사용하는 것은 스프링 공식 메뉴얼에서 권장하지 않는다. 
-
-AOP를 적용하는 방식에 따라서 인터페이스에 애노테이션을 두면 AOP가 적용이 되지 않는 경우도 있기 때문이다. 
-
-과거 CGLIB를 통해 프록시를 생성할때 인터페이스의 경우 적용이 되지 않았다.(스프링 5.0부터는 개선함)
+- 트랜잭션의 적용 위치에 따른 우선순위는 항상 더 구체적이고 자세한 것이 높은 우선순위를 가진다. 또한 클래스에 적용하면 메서드는 자동 적용한다.
+- 추가로 Interface에 `@Transactional` 사용하는 것은 스프링 공식 메뉴얼에서 권장하지 않는다. 
+    - AOP를 적용하는 방식에 따라서 Interface에 annotation을 두면 AOP가 적용이 되지 않는 경우도 있기 때문이다. 
+    - 과거 CGLIB를 통해 프록시를 생성할때 인터페이스의 경우 적용이 되지 않았다.(스프링 5.0부터는 개선함)
