--- a/Spring/트랜잭션적용.md
+++ b/Spring/트랜잭션적용.md
@@ -1,1 +1,121 @@
 # 트랜잭션 적용
+- 스프링의 트랜잭션 AOP 기능은 public 메서드에만 트랜잭션을 적용하도록 기본 설정이 되어있다. (스프링 부트 3.0 부터는 protected , package-visible (default 접근제한자)에도 트랜잭션이 적용된다.)
+- 선언적 트랜잭션 방식(@Transactional)으로 트랜잭션을 적용하려면 항상 proxy를 통해서 target을 호출해야 한다.
+- target의 내부에서 선언적 트랜잭션(@Transactional)이 적용된 메서드를 호출하면 프록시를 거치지 않고 대상 객체를 직접 호출하는 문제가 발생한다.
+
+```java
+public class InternalCallV1Test {
+    @Autowired
+    CallService callService;
+
+    @Test
+    void externalCall() {
+        callService.external();
+    }
+
+    @TestConfiguration
+    static class InternalCallV1TestConfig {
+        @Bean
+        CallService callService() {
+            return new CallService();
+        }
+    }
+}
+```
+
+아래 코드는 trnasaction이 적용되지 않는다.
+
+```java
+@Slf4j
+static class CallService {
+    public void external() {
+        log.info("call external");
+        printTxInfo();
+        this.internal();
+    }
+
+    @Transactional
+    public void internal() {
+        log.info("call internal");
+        printTxInfo();
+    }
+
+    private void printTxInfo() {
+        boolean txActive = TransactionSynchronizationManager.isActualTransactionActive();
+        log.info("tx active={}", txActive);
+    }
+}
+```
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/2ee7aeb7-9afc-40e8-a129-d174fcf48a12)
+
+1. callService는 트랜잭션 프록시이다.
+2. external() 메서드에는 @Transactional 이 없다. 따라서 트랜잭션 프록시는 트랜잭션을 적용하지않는다.
+3. 트랜잭션을 적용하지 않고, target callService 객체 인스턴스의 external() 을 호출한다.
+4. external() 은 내부에서 internal() 메서드를 호출한다.
+5. 자기 자신의 내부 메서드를 호출하는 this.internal() 이 되는데, target의 인스턴스를 호출하여 프록시를 거치지 않는다.
+
+
+아래와 같이 internal 메서드가 있는 클래스를 따로 만들어주어 트랜잭션을 적용한다.
+
+```java
+static class InternalService {
+    @Transactional
+    public void internal() {
+        log.info("call internal");
+        printTxInfo();
+    }
+
+    private void printTxInfo() {
+        boolean txActive = TransactionSynchronizationManager.isActualTransactionActive();
+        log.info("tx active={}", txActive);
+    }
+}
+```
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/8d8527b4-dae8-4664-8eb0-1237a8221bd6)
+
+### 스프링의 초기화 시
+
+스프링 초기화 시점에는 트랜잭션 AOP가 적용되지 않을 수 있다.
+
+ApplicationReadyEvent를 통해 트랜잭션을 스프링 초기화 시점에 획득할 수 있다.
+
+```java
+@SpringBootTest
+public class InitTxTest {
+    @Autowired Hello hello;
+
+    @Test
+    void go() {
+        //초기화 코드는 스프링이 초기화 시점에 호출한다.
+    }
+
+    @TestConfiguration
+    static class InitTxTestConfig {
+        @Bean
+        Hello hello() {
+            return new Hello();
+        }
+    }
+
+    @Slf4j
+    static class Hello {
+        //트랜잭션이 적용되지 않음
+        @PostConstruct
+        @Transactional
+        public void initV1() {
+            boolean isActive = TransactionSynchronizationManager.isActualTransactionActive();
+            log.info("Hello init @PostConstruct tx active={}", isActive);
+        }
+
+        //트랜잭션이 적용됨
+        @EventListener(ApplicationReadyEvent.class)
+        @Transactional
+        public void initV2() {
+            boolean isActive = TransactionSynchronizationManager.isActualTransactionActive();
+            log.info("Hello init ApplicationReadyEvent tx active={}", isActive);
+        }
+    }
+}
+```
